  character above Unicode point U+0800.
* dpost: Fixed a bug introduced with the previous release that caused
  PostScript errors on a page following colored text unless the "-e"
  option was explicitly specified.
* dpost: Now handles DSC font comments in included PostScript files and
  supplies glyph data for them if specified with a troff ".fp" request.

Release 061010
* A simplistic XSLT stylesheet to convert OpenDocument text to troff input
  has been added. See the comments in the file "stuff/odt2tr.xsl" for usage
  instructions.
* [nt]roff: Local strings and number registers are now supported. They can
  be defined using ".lds", ".lnr", and ".lnrf". A local string or register
  is visible only in the instance of the macro in which is has been defined
  and can then be accessed like a standard global string or register.
* [nt]roff: The ".pull" request has been introduced to print text of a given
  height from a diversion and remove it afterwards.
* [nt]roff: The ".writem" request has been added to write the contents of
  a string, macro, or diversion to a file stream.
* [nt]roff: The ".dwh" and ".dch" requests have been introduced to allow
  multiple diversion traps in the same diversion.
* [nt]roff: The ".trin" (translate but retranslate with ".asciify") and
  ".trnt" (translate but not in transparent mode) requests have been added.
* [nt]roff: The "\n[.dilev]" register contains the current diversion level.
* [nt]roff: The "\B" escape sequence (check for valid numerical expression)
  is now available in regular mode too, not only in groff compatibility mode.
* troff: The second argument to the ".fkern" request now specifies a minimum
  absolute amount for kerning pairs read from font metrics files. Kerning
  pairs with smaller adjustments are ignored.
* tbl: Can now optionally use graphic drawing commands (troff "\D") instead
  of repeated-character line drawing (troff "\l" and "\L"). The "graphics"